Bug 1719483 - SVG observers shouldn't observe changes to anonymous content like scrollbars. r=dholbert

Scrollbar attribute changes run at uncommon times, and SVG shouldn't
really need to care about them (reflowing the relevant nodes should
trigger an observer invalidation).

Differential Revision: https://phabricator.services.mozilla.com/D121712